<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>

    <string name="app_name">Shuffle list</string>
    <string name="action_shuffle">Shuffle</string>
    <string name="action_trash">Trash</string>
    <string name="action_rate">Rate</string>
    <string name="action_clear">Clear all</string>
    <string name="action_feedback">Feedback</string>
    
    <string name="author_email">artemyankovskiy@gmail.com</string>
    <string name="chooseEmailApp">Choose the app for sending of email</string>
    
    <string name="enterText">Enter text</string>

</resources>
