<!--
  Copyright (C) 2014 Artem Yankovskiy (artemyankovskiy@gmail.com).
      This program is free software: you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published by
      the Free Software Foundation, either version 3 of the License, or
      (at your option) any later version.
  
      This program is distributed in the hope that it will be useful,
      but WITHOUT ANY WARRANTY; without even the implied warranty of
      MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
      GNU General Public License for more details.
  
      You should have received a copy of the GNU General Public License
      along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_shuffle"
        android:icon="@drawable/ic_action_shuffle"
        android:showAsAction="always"
        android:title="@string/action_shuffle"/>
    <item
        android:id="@+id/action_trash"
        android:icon="@drawable/ic_action_trash"
        android:showAsAction="always"
        android:title="@string/action_trash"/>
    <item
        android:id="@+id/action_clear"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_rate"
        android:showAsAction="never"
        android:title="@string/action_rate"/>
    <item
        android:id="@+id/action_feedback"
        android:showAsAction="never"
        android:title="@string/action_feedback"/>

</menu>
